fixed the bug with scroll jump

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,30 @@ body {
     margin: 0 auto;
 }
 
+section,
+footer,
+header {
+    position: relative;
+}
+
+section::before,
+footer::before,
+header::before {
+    content: none;
+}
+
+section.active::before,
+footer.active::before,
+header.active::before {
+    content: "";
+    position: absolute;
+    background: inherit;
+    width: calc(100vw - 100%);
+    height: 100%;
+    top: 0;
+    right: -15px;
+}
+
 /* body::after {
     content: "";
     position: fixed;
